--- a/style.css
+++ b/style.css
@@ -290,11 +290,17 @@ section.contact .btn-wrapper{
     text-align: center;
     margin-top:2rem;
 }
-
+.btn{
+    border-radius: 10px;
+}
+.imagee{
+    border-radius: 10px;
+    margin-bottom: 100px;
+}
 footer{
     background:var(--dark);
     text-align: center;
-    padding:5rem 0;
+    padding:2rem 0;
 }
 footer .footer-logo{
     margin-bottom:3rem;
@@ -306,6 +312,11 @@ footer .footer-socials a{
 footer .footer-socials{
     margin-bottom:3rem;
     margin-right:-1rem;
+}
+.footer-name{
+    font-weight: bold;
+    color:  var(--primary);
+    font-size: 15px;
 }
 
 .hamberger{
